feat: 优化一些编码警告